LFSP-358: Added feeDetails v2 endpoint
